--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vui-boilerplate",
+  "name": "vue-spa-template",
   "version": "0.0.0",
   "license": "MIT",
   "description": "一个全功能的vue2全家桶，包括安装、热刷新、js语法检测、单元测试、端对端测试等……",
