--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "description": "一个全功能的vue2全家桶，包括安装、热刷新、js语法检测、单元测试、端对端测试等……",
   "scripts": {
-    "docs": "cd docs && gitbook serve"
+    "docs": "cd docs && gitbook serve",
+    "test": "./node_modules/.bin/vue init . tpltest"
   },
   "devDependencies": {
     "vue-cli": "^2.9.3"
