--- a/template/.babelrc
+++ b/template/.babelrc
@@ -1,7 +1,17 @@
 {
   "presets": [
-    ["env", { "modules": false }],
-    "es2015",
+    ["env", {
+      "modules": false,
+      "targets": {
+        "browsers": [
+          "> 1%",
+          "iOS > 7",
+          "Android >= 4.0",
+          "last 2 versions",
+          "not ie <= 8"
+        ]
+      }
+    }],
     "stage-2"
   ],
   "comments": false,
