--- a/template/package.json
+++ b/template/package.json
@@ -5,14 +5,14 @@
   "author": "{{ author }}",
   "private": true,
   "scripts": {
-    "dev": "set BABEL_ENV=development && node build/dev-server.js",
-    "dev:test": "export BABEL_ENV=testing && export DEV_ENV=testing && node build/dev-server.js",
-    "dev:lab": "export BABEL_ENV=labing && export DEV_ENV=labing && node build/dev-server.js",
-    "dev:pro": "export BABEL_ENV=production && export DEV_ENV=production && node build/dev-server.js",
-    "start": "export BABEL_ENV=development && node build/dev-server.js",
-    "build": "export BABEL_ENV=production && export DEV_ENV=production && node build/build.js",
-    "build:lab": "export BABEL_ENV=production && export DEV_ENV=labing && node build/build.js",
-    "build:test": "export BABEL_ENV=testing && export DEV_ENV=testing && node build/build.js"{{#unit}},
+    "dev": "cross-env BABEL_ENV=development && node build/dev-server.js",
+    "dev:test": "cross-env BABEL_ENV=testing && cross-env DEV_ENV=testing && node build/dev-server.js",
+    "dev:lab": "cross-env BABEL_ENV=labing && cross-env DEV_ENV=labing && node build/dev-server.js",
+    "dev:pro": "cross-env BABEL_ENV=production && cross-env DEV_ENV=production && node build/dev-server.js",
+    "start": "cross-env BABEL_ENV=development && node build/dev-server.js",
+    "build": "cross-env BABEL_ENV=production && cross-env DEV_ENV=production && node build/build.js",
+    "build:lab": "cross-env BABEL_ENV=production && cross-env DEV_ENV=labing && node build/build.js",
+    "build:test": "cross-env BABEL_ENV=testing && cross-env DEV_ENV=testing && node build/build.js"{{#unit}},
     "unit": "cross-env BABEL_ENV=testing karma start test/unit/karma.conf.js --single-run"{{/unit}}{{#e2e}},
     "e2e": "node test/e2e/runner.js"{{/e2e}}{{#if_or unit e2e}},
     "test": "{{#unit}}npm run unit{{/unit}}{{#unit}}{{#e2e}} && {{/e2e}}{{/unit}}{{#e2e}}npm run e2e{{/e2e}}"{{/if_or}}{{#lint}},
@@ -21,56 +21,65 @@
   "dependencies": {
     {{#ui}}
     {{#if_eq uiConfig "em-fe"}}
-    "em-fe": "^1.0.29",
+    "em-fe": "^1.6.0",
     "iscroll": "^5.2.0",
     {{/if_eq}}
     {{/ui}}
     {{#jsonp}}
     "em-jsonp": "^1.0.4",
     {{/jsonp}}
+    "cache-loader": "^1.2.2",
+    "cross-env": "^5.1.4",
     "em-normalize": "^1.0.2",
+    "mini-css-extract-plugin": "^0.4.0",
+    "style-loader": "^0.20.3",
+    "stylelint": "^9.2.0",
     "vue": "{{ vueversion }}",
-    "vuex": "^2.3.1"{{#router}},
-    "vue-router": "^2.3.1"{{/router}}
+    "vuex": "^3.0.1"{{#router}},
+    "vue-router": "^3.0.1"{{/router}}
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.2",
-    "babel-core": "^6.22.1",
-    "axios": "^0.16.2",
+    "autoprefixer": "^8.2.0",
+    "axios": "^0.18.0",
+    "babel-core": "^6.26.0",
+    "node-sass": "^4.8.3",
     {{#stylelint}}
     "stylelint-webpack-plugin": "^0.7.0",
     {{/stylelint}}
     {{#lint}}
-    "babel-eslint": "^7.1.1",
+    "babel-eslint": "^8.2.2",
     {{/lint}}
-    "babel-loader": "^6.2.10",
-    "babel-plugin-istanbul": "^4.1.1",
-    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-dynamic-import-webpack": "^1.0.2",
+    "babel-plugin-istanbul": "^4.1.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-strict-mode": "^6.24.1",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "chalk": "^1.1.3",
-    "compression-webpack-plugin": "^1.0.1",
-    "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chalk": "^2.3.2",
+    "compression-webpack-plugin": "^1.1.11",
+    "connect-history-api-fallback": "^1.5.0",
+    "copy-webpack-plugin": "^4.5.1",
+    "css-loader": "^0.28.11",
     {{#lint}}
-    "eslint": "^3.19.0",
-    "eslint-friendly-formatter": "^2.0.7",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-html": "^2.0.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-friendly-formatter": "^4.0.0",
+    "eslint-import-resolver-webpack": "^0.9.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-html": "^4.0.2",
+    "eslint-plugin-import": "^2.10.0",
     {{#if_eq lintConfig "standard"}}
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
     {{/if_eq}}
     {{#if_eq lintConfig "airbnb"}}
-    "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-import-resolver-webpack": "^0.8.1",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-import-resolver-webpack": "^0.9.0",
+    "eslint-plugin-import": "^2.10.0",
     {{/if_eq}}
     {{/lint}}
     {{#ui}}
@@ -82,13 +91,13 @@
     {{/if_eq}}
     {{/ui}}
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.11.1",
-    "friendly-errors-webpack-plugin": "^1.1.3",
-    "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.3",
-    "webpack-bundle-analyzer": "^2.2.1",
+    "express": "^4.16.3",
+    "extract-text-webpack-plugin": "next",
+    "file-loader": "^1.1.11",
+    "friendly-errors-webpack-plugin": "^1.6.1",
+    "html-webpack-plugin": "^3.2.0",
+    "http-proxy-middleware": "^0.18.0",
+    "webpack-bundle-analyzer": "^2.11.1",
     "babel-plugin-dynamic-import-webpack": "^1.0.1",
     {{#unit}}
     "cross-env": "^4.0.0",
@@ -116,28 +125,28 @@
     "nightwatch": "^0.9.12",
     "selenium-server": "^3.0.1",
     {{/e2e}}
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.8",
-    "opn": "^4.0.2",
-    "optimize-css-assets-webpack-plugin": "^1.3.0",
-    "ora": "^1.2.0",
-    "postcss": "^6.0.1",
+    "opn": "^5.3.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.0",
+    "ora": "^2.0.0",
+    "postcss": "^6.0.21",
+    "postcss-cssnext": "^3.1.0",
     "postcss-initial": "^2.0.0",
-    "postcss-cssnext": "^2.11.0",
-    "postcss-nested": "^2.0.2",
-    "postcss-nested-ancestors": "^1.0.0",
-    "postcss-nested-props": "^1.1.7",
-    "rimraf": "^2.6.0",
-    "url-loader": "^0.5.8",
-    "vue-loader": "^12.1.0",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "{{ vueversion }}",
-    "webpack": "^2.6.1",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.18.0",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.5",
-    "webpack-merge": "^4.1.0"
+    "postcss-nested": "^3.0.0",
+    "postcss-nested-ancestors": "^2.0.0",
+    "postcss-nested-props": "^2.0.0",
+    "rimraf": "^2.6.2",
+    "sass-loader": "^6.0.7",
+    "semver": "^5.5.0",
+    "shelljs": "^0.8.1",
+    "stylelint-webpack-plugin": "^0.10.4",
+    "url-loader": "^1.0.1",
+    "vue-loader": "^14.2.2",
+    "vue-style-loader": "^4.1.0",
+    "vue-template-compiler": "2.5.16",
+    "webpack": "^4.5.0",
+    "webpack-dev-middleware": "^3.1.0",
+    "webpack-hot-middleware": "^2.21.2",
+    "webpack-merge": "^4.1.2"
   },
   "engines": {
     "node": ">= 4.0.0",
