--- a/template/package.json
+++ b/template/package.json
@@ -126,7 +126,6 @@
     "selenium-server": "^3.0.1",
     {{/e2e}}
     "opn": "^5.3.0",
-    "optimize-css-assets-webpack-plugin": "^4.0.0",
     "ora": "^2.0.0",
     "postcss": "^6.0.21",
     "postcss-cssnext": "^3.1.0",
@@ -142,7 +141,7 @@
     "url-loader": "^1.0.1",
     "vue-loader": "^14.2.2",
     "vue-style-loader": "^4.1.0",
-    "vue-template-compiler": "2.5.16",
+    "vue-template-compiler": "{{ vueversion }}",
     "webpack": "^4.5.0",
     "webpack-dev-middleware": "^3.1.0",
     "webpack-hot-middleware": "^2.21.2",
