--- a/template/package.json
+++ b/template/package.json
@@ -5,20 +5,21 @@
   "author": "{{ author }}",
   "private": true,
   "scripts": {
-    "dev": "cross-env BABEL_ENV=development && node build/dev-server.js",
-    "dev:test": "cross-env BABEL_ENV=testing && cross-env DEV_ENV=testing && node build/dev-server.js",
-    "dev:lab": "cross-env BABEL_ENV=labing && cross-env DEV_ENV=labing && node build/dev-server.js",
-    "dev:pro": "cross-env BABEL_ENV=production && cross-env DEV_ENV=production && node build/dev-server.js",
-    "start": "cross-env BABEL_ENV=development && node build/dev-server.js",
-    "build": "cross-env BABEL_ENV=production && cross-env DEV_ENV=production && node build/build.js",
-    "build:lab": "cross-env BABEL_ENV=production && cross-env DEV_ENV=labing && node build/build.js",
-    "build:test": "cross-env BABEL_ENV=testing && cross-env DEV_ENV=testing && node build/build.js"{{#unit}},
-    "unit": "cross-env BABEL_ENV=testing karma start test/unit/karma.conf.js --single-run"{{/unit}}{{#e2e}},
+    "dev": "export BABEL_ENV=development && export DEV_ENV=development && export NODE_ENV=development && node build/dev-server.js",
+    "dev:test": "export BABEL_ENV=testing && export DEV_ENV=testing && node build/dev-server.js",
+    "dev:lab": "export BABEL_ENV=labing && export DEV_ENV=labing && node build/dev-server.js",
+    "dev:pro": "export BABEL_ENV=production && export DEV_ENV=production && node build/dev-server.js",
+    "start": "export BABEL_ENV=development && export DEV_ENV=development && node build/dev-server.js",
+    "build": "export BABEL_ENV=production && export DEV_ENV=production && node build/build.js",
+    "build:lab": "export BABEL_ENV=production && export DEV_ENV=labing && node build/build.js",
+    "build:test": "export BABEL_ENV=testing && export DEV_ENV=testing && node build/build.js"{{#unit}},
+    "unit": "export BABEL_ENV=testing karma start test/unit/karma.conf.js --single-run"{{/unit}}{{#e2e}},
     "e2e": "node test/e2e/runner.js"{{/e2e}}{{#if_or unit e2e}},
     "test": "{{#unit}}npm run unit{{/unit}}{{#unit}}{{#e2e}} && {{/e2e}}{{/unit}}{{#e2e}}npm run e2e{{/e2e}}"{{/if_or}}{{#lint}},
     "lint": "eslint --ext .js,.vue src{{#unit}} test/unit/specs{{/unit}}{{#e2e}} test/e2e/specs{{/e2e}}"{{/lint}}
   },
   "dependencies": {
+    "em-cookie": "^1.0.6",
     {{#ui}}
     {{#if_eq uiConfig "em-fe"}}
     "em-fe": "^1.6.0",
@@ -29,12 +30,14 @@
     "em-jsonp": "^1.0.4",
     {{/jsonp}}
     "cache-loader": "^1.2.2",
-    "cross-env": "^5.1.4",
     "em-normalize": "^1.0.2",
     "mini-css-extract-plugin": "^0.4.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.1",
+    "progress-bar-webpack-plugin": "^1.11.0",
     "style-loader": "^0.20.3",
     "stylelint": "^9.2.0",
     "vue": "{{ vueversion }}",
+    "vue-pretty-logger": "^0.8.7",
     "vuex": "^3.0.1"{{#router}},
     "vue-router": "^3.0.1"{{/router}}
   },
@@ -100,7 +103,6 @@
     "webpack-bundle-analyzer": "^2.11.1",
     "babel-plugin-dynamic-import-webpack": "^1.0.1",
     {{#unit}}
-    "cross-env": "^4.0.0",
     "karma": "^1.4.1",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
@@ -113,6 +115,7 @@
     "lolex": "^1.5.2",
     "mocha": "^3.2.0",
     "chai": "^3.5.0",
+    "chalk": "^2.4.1",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
     "inject-loader": "^3.0.0",
@@ -136,7 +139,7 @@
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.7",
     "semver": "^5.5.0",
-    "shelljs": "^0.8.1",
+    "shelljs": "^0.8.2",
     "stylelint-webpack-plugin": "^0.10.4",
     "url-loader": "^1.0.1",
     "vue-loader": "^14.2.2",
