feat($ssr): create site

--- a/package.json
+++ b/package.json
@@ -1,13 +1,96 @@
 {
-  "name": "vue-spa-template",
-  "version": "2.2.0",
-  "license": "MIT",
-  "description": "一个全功能的vue2全家桶，包括安装、热刷新、js语法检测、单元测试、端对端测试等……",
+  "name": "vue-site-template",
+  "version": "1.0.0",
+  "description": "vue 2.x 官网应用模板",
+  "author": "李梦龙 <649076408@qq.com>",
+  "private": true,
   "scripts": {
-    "docs": "cd docs && gitbook serve",
-    "test": "./node_modules/.bin/vue init . tpltest"
+    "start": "export BABEL_ENV=development && export DEV_ENV=development && export NODE_ENV=development && node build/dev-server.js",
+    "build": "export BABEL_ENV=production && export DEV_ENV=production && export NODE_ENV=production && node build/build.js"
+  },
+  "dependencies": {
+    "cache-loader": "^1.2.2",
+    "chokidar": "^2.0.3",
+    "fs-extra": "^6.0.1",
+    "koa-connect": "^2.0.1",
+    "mini-css-extract-plugin": "^0.4.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.1",
+    "postcss-loader": "^2.1.5",
+    "progress-bar-webpack-plugin": "^1.11.0",
+    "style-loader": "^0.20.3",
+    "stylelint": "^9.2.0",
+    "vue": "2.5.16",
+    "vue-pretty-logger": "^0.9.0",
+    "vue-router": "^3.0.1",
+    "vue-server-renderer": "^2.5.16",
+    "vuex": "^3.0.1",
+    "vuex-router-sync": "^5.0.0",
+    "webpack-chain": "^4.8.0",
+    "webpack-node-externals": "^1.7.2",
+    "webpack-serve": "^1.0.2",
+    "webpackbar": "^2.6.1"
   },
   "devDependencies": {
-    "vue-cli": "^2.9.3"
-  }
+    "autoprefixer": "^8.2.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-dynamic-import-webpack": "^1.0.1",
+    "babel-plugin-istanbul": "^4.1.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-transform-strict-mode": "^6.24.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chalk": "^2.3.2",
+    "compression-webpack-plugin": "^1.1.11",
+    "connect-history-api-fallback": "^1.5.0",
+    "copy-webpack-plugin": "^4.5.1",
+    "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-friendly-formatter": "^4.0.0",
+    "eslint-import-resolver-webpack": "^0.9.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-html": "^4.0.2",
+    "eslint-plugin-import": "^2.10.0",
+    "eventsource-polyfill": "^0.9.6",
+    "express": "^4.16.3",
+    "file-loader": "^1.1.11",
+    "friendly-errors-webpack-plugin": "^1.6.1",
+    "html-webpack-plugin": "^3.2.0",
+    "http-proxy-middleware": "^0.18.0",
+    "node-sass": "^4.8.3",
+    "postcss": "^6.0.21",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-initial": "^2.0.0",
+    "postcss-nested": "^3.0.0",
+    "postcss-nested-ancestors": "^2.0.0",
+    "postcss-nested-props": "^2.0.0",
+    "sass-loader": "^6.0.7",
+    "semver": "^5.5.0",
+    "shelljs": "^0.8.2",
+    "stylelint-webpack-plugin": "^0.10.4",
+    "url-loader": "^1.0.1",
+    "vue-loader": "^15.2.1",
+    "vue-style-loader": "^4.1.0",
+    "vue-template-compiler": "2.5.16",
+    "webpack": "^4.9.1",
+    "webpack-bundle-analyzer": "^2.11.1",
+    "webpack-dev-middleware": "^3.1.0",
+    "webpack-hot-middleware": "^2.21.2",
+    "webpack-merge": "^4.1.2"
+  },
+  "engines": {
+    "node": ">= 4.0.0",
+    "npm": ">= 3.0.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "iOS > 7",
+    "Android >= 4.0",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
