--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,36 @@
-node_modules
 .DS_Store
-docs/_book
-tpltest*
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+test/unit/coverage
+test/e2e/reports
+selenium-debug.log
+*.log
+.idea/
+dist/
+out
+*.iml
+.idea
+.ipr
+.iws
+*.diff
+.tags*
+*.patch
+*.bak
+.project
+.settings
+.*proj
+.svn/
+*.swp
+*.swo
+*.log.*
+*.ini
+yarn.lock
+package-lock.json
+.vscode
+$Recycle.Bin
+dist
+.cache*
+coverage
+docs/
