build($config): compatible with window

--- a/template/.gitignore
+++ b/template/.gitignore
@@ -1,9 +1,33 @@
+out
+*.iml
+.idea
+.ipr
+.iws
+*.diff
+.tags*
+*.patch
+*.bak
 .DS_Store
 node_modules/
-dist/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+.project
+.settings
+.*proj
+.svn/
+*.swp
+*.swo
+*.log
+*.log.*
+*.ini
+yarn.lock
+package-lock.json
+yarn-error.log
+.vscode
+$Recycle.Bin
+dist
+.cache*
+coverage
+docs/
+.gitlab-ci.yml
 {{#unit}}
 test/unit/coverage
 {{/unit}}
