--- a/template/package.json
+++ b/template/package.json
@@ -46,6 +46,7 @@
     "progress-bar-webpack-plugin": "^1.11.0",
     "style-loader": "^0.20.3",
     "stylelint": "^9.2.0",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "vue": "{{ vueversion }}",
     "vue-pretty-logger": "^0.9.0",
     "vuex": "^3.0.1"{{#router}},
@@ -155,7 +156,7 @@
     "vue-loader": "^14.2.2",
     "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "{{ vueversion }}",
-    "webpack": "^4.5.0",
+    "webpack": "^4.24.0",
     "webpack-dev-middleware": "^3.1.0",
     "webpack-hot-middleware": "^2.21.2",
     "webpack-merge": "^4.1.2"
